Introduce profile management and registry features
This commit adds a comprehensive profile management system, enabling users
to define and manage sets of Docker Compose services. Users can now:

- Create, import, export, list, and delete profiles.
- Run Docker Compose services directly from a saved profile.

Registry capabilities have been enhanced to support direct import from
YAML files, including an option to force overwrite existing services.
A new method `buildFromRegistryAndRun` allows users to spin up services
from the registry into a temporary Docker Compose file.

Supporting changes include:
- Refactoring `TempComposeFile` and `ProcessStarter` for static usage
  and improved error handling.
- Adding `app_test` and `redis` service definitions to the default registry.
- Improving error message clarity and utility class finalization.